--- a/index.qmd
+++ b/index.qmd
@@ -23,7 +23,7 @@ format:
     transition: fade
     progress: true
     multiplex: false
-    scrollable: true
+    scrollable: false
     preview-links: false
     hide-inactive-cursor: true
     highlight-style: printing
@@ -80,7 +80,7 @@ Was sind die Ziele des Workshops?
 [Habt ihr spezielle Erwartungen oder Wünsche für diesen Workshop?]{.bubble .bubble-bottom-right .absolute top="15%" right="0%" style="max-width:400px;--bubcol: var(--bubcol-dred); font-size:1.8rem;"}
 
 
-# Die frühen Rockstars der Datenvisualisierung
+# Die frühen Stars der Datenvisualisierung
 
 ::: {.absolute top="90%" left="30%" width="400px" height="336px"}
 ![](img/avatar_cool.png)
@@ -172,11 +172,7 @@ Die Gestalt-Prinzipien bieten einen psychologischen Ansatz dafür, wie das mensc
 
 ![](img/gestalt_header2.png){height="250" fig-align="center"}
 
-Ein Gemälde erscheint und als Bild und nicht als einzelne Pinselstriche. Menschen greifen bei der Verarbeitung von Informationen auf Erfahrungen zurück.
-
-::: {.aside}
-Quelle: @healy:2018
-:::
+Gestaltpsychologie entwickelte sich in den 1920er Jahren zu einer eigenständigen Theorie und untersucht die kognitiven Mechanismen, Phänomäne wahrzunehmen und einzuordnen.
 
 ## Ausgewählte Prinzipien {.smaller}
 
@@ -191,7 +187,7 @@ Quelle: @healy:2018
 Quelle: @healy:2018
 :::
 
-## Unser Gehirn sucht nach Struktur {.medium}
+## Gestaltpsychologie in der Datenvisualisierung {.medium}
 
 ![](img/gestalt.png){fig-align="center" height=500}
 
@@ -270,7 +266,7 @@ panel.grid.minor.y = element_blank())
 
 ![](img/charttypes.webp){fig-align="center" height="530"}
 
-## Welches Chart beschreibt die Geschichte am besten? {.medium}
+## Welche Grafik beschreibt die Aussage am klarsten? {.medium}
 
 ::: {.columns}
 ::: {.column}
@@ -282,12 +278,14 @@ library(MetBrewer)
 library(scales)
 load("data/gdp.RData")
 
+gdp <- gdp |> mutate(geo = recode_factor(geo, Austria = "Österreich", France ="Frankreich", Germany = "Deutschland", Italy = "Italien", Spain = "Spanien"))
+
 gdp |> filter(unit == "Chain linked volumes (2010), euro per capita") |> 
   ggplot(aes(x = time, y = values, group = geo, color = geo)) +
   geom_line(size = 1) +
   scale_color_manual(name = NULL, values = met.brewer("Juarez")) +
   scale_y_continuous(labels = scales::number_format(prefix = "€", big.mark = ",")) +
-  labs(x = NULL, y = NULL,  title = "GDP per capita in €") +
+  labs(x = NULL, y = NULL,  title = "BIP pro Kopf in €") +
   theme_minimal() +
   theme(panel.grid.minor = element_blank(),
         legend.position = "bottom")
@@ -302,7 +300,7 @@ gdp |> filter(str_detect(unit, "percentage")) |>
   geom_point(size = 0.2) +
   scale_color_manual(name = NULL, values = met.brewer("Juarez")) +
   scale_y_continuous(labels = scales::percent_format(scale = 1)) +
-  labs(x = NULL, y = NULL, title = "Growth rates of per capita GDP") +
+  labs(x = NULL, y = NULL, title = "BIP pro Kopf, jährliches Wachstum") +
   theme_minimal() +
   theme(panel.grid.minor.x = element_blank(),
         panel.grid.minor.y = element_blank(),
@@ -310,7 +308,7 @@ gdp |> filter(str_detect(unit, "percentage")) |>
 ```
 
 :::
-::: {.column .fragment}
+::: {.column}
 ```{r base}
 #| echo: false
 #| fig-height: 2.9
@@ -320,7 +318,7 @@ gdp |> filter(unit == "Chain linked volumes (2010), euro per capita") |>
   geom_hline(yintercept = 100, color = "black", size = 0.5) +
   geom_line(size = 0.8) +
   scale_color_manual(name = NULL, values = met.brewer("Juarez")) +
-  labs(x = NULL, y = NULL, title = "GDP per capita with anchor (2000 = 100)") +
+  labs(x = NULL, y = NULL, title = "BIP pro Kopf mit Anker (2000 = 100)") +
   theme_minimal() +
   theme(panel.grid.minor.x = element_blank(),
         panel.grid.minor.y = element_blank(),
@@ -337,7 +335,7 @@ gdp |> filter(str_detect(unit, "percentage")) |>
   scale_fill_manual(values = met.brewer("Juarez")) +
   scale_y_continuous(labels = scales::percent_format(scale = 1)) +
   scale_x_reverse() +
-  labs(x = NULL, y = NULL, title = "GDP growth rates from 2000 to 2021") +
+  labs(x = NULL, y = NULL, title = "Wachstum des BIP pro Kopf zwischen 2000 und 2021") +
   theme_minimal() +
   theme(legend.position = "none",
         axis.text.x = element_text(size = 7),
@@ -604,31 +602,33 @@ Quelle: @schwabish:2014
 ::: footer
 :::
 
-## Irreführende Grafiken {.medium}
+## Irreführende Balkengrafik {.medium}
 
-::: {.columns}
-::: {.column}
-![](img/deceptive_bar.png)
-:::
-::: {.column}
-![](img/deceptive_line.png)
-:::
-:::
+![](img/deceptive_bar.png){height="500" fig-align="center"}
 
 ::: {.aside}
 Quelle: @lauer:2020
 :::
 
-## Irreführende Grafiken {.medium}
+## Irreführende Liniengrafike {.medium}
 
-::: {.columns}
-::: {.column}
-![](img/deceptive_pie.png)
+![](img/deceptive_line.png){height="500" fig-align="center"}
+
+::: {.aside}
+Quelle: @lauer:2020
 :::
-::: {.column}
-![](img/deceptive_bubble.png)
+
+## Irreführende Tortengrafiken {.medium}
+
+![](img/deceptive_pie.png){height="500" fig-align="center"}
+
+::: {.aside}
+Quelle: @lauer:2020
 :::
-:::
+
+## Irreführende Kreisgrafiken {.medium}
+
+![](img/deceptive_bubble.png){height="500" fig-align="center"}
 
 ::: {.aside}
 Quelle: @lauer:2020
@@ -854,7 +854,7 @@ Quelle: [New York Times](https://www.nytimes.com/interactive/2022/02/01/science/
 - Die [#tidytuesday](https://twitter.com/search?q=%23tidytuesday) Gemeinschaft ist eine wöchentliche Grafik-Challenge auf Twitter. Es gibt auch andere Events wie die [#30DayChartChallenge](https://twitter.com/30DayChartChall) im April 2023.
 - Folgt der R-Community auf Twitter für Inspiration, z.B. [Cédric Scherer](https://twitter.com/CedScherer), [Georios Karamanis](https://twitter.com/geokaramanis), [Tanya Shapiro](https://twitter.com/tanya_shapiro), u.v.m.
 - Der ["Information is beautiful" Award](https://www.informationisbeautifulawards.com/showcase?action=index&award=2022&controller=showcase&page=1&pcategory=short-list&type=awards) ist der bekannteste Preis für Informationsgrafiken.
-- [Datawrapper River](https://app.datawrapper.de/river) ist eine Plattform für den Austausch von Infografiken, die mit Datawrapper erstellt werden.
+- Homepages und Blogs wie etwa [Datawrapper River](https://app.datawrapper.de/river), [Flowing Data](https://flowingdata.com) oder [FiveThirtyEight](https://fivethirtyeight.com).
 
 ##  Es gibt mehr als nur Balken- und Kreisdiagramme {.medium}
 
